# microxdg

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: app.rs  error.rs  lib.rs  main.rs
